# 240-project

./: .gitignore  CMakeLists.txt  README.md  User manual_texteditor.docx  programmer_documentation.docx
240_Group_project/: main.cpp  read_write_file.cpp  read_write_file.h  test
src/: edit.cpp  edit.h  keybind.h  main.cpp  read  read_write_file.cpp  read_write_file.h  undo.cpp  undo.h
